--- a/style.css
+++ b/style.css
@@ -5,6 +5,27 @@
     justify-content: space-between;
 }
 
+.logo {
+    width: 10%;
+    height: auto;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-around;
+    align-content: margin-right;
+    width: 80%;
+    align-items: center;
+    color: black;
+}
+
+.menu a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold; 
+    font-size: 12px;
+}
+
 .cajas {
     justify-content: space-around;
 }
@@ -12,8 +33,4 @@
 .servicios {
     background-color: pink;
     justify-content: space-around;
-}
-
-.detalle {
-
 }
