--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
 .contenedor {
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
-    align-content: center;
     justify-content: space-between;
+    width: 100%;
 }
 
-.logo {
-    width: 10%;
-    height: auto;
+.encabezado {
+    display: flex;
+    height: 8vw;
 }
 
 .menu {
-    display: flex;
     justify-content: space-around;
     align-content: margin-right;
     width: 80%;
-    align-items: center;
-    color: black;
+    align-items: baseline;
 }
 
 .menu a {
-    color: black;
     text-decoration: none;
+    color: black;
     font-weight: bold; 
-    font-size: 12px;
 }
 
 .cajas {
