--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@
     justify-content: space-around;
 }
 
-.detalle {
+.jefa{
+    display:flex;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: space-between;
+    color: black;
+    width: 200px;
+}
+
+.jefa div img{
+    border-radius: 50%;
+    width: 200px;
 
 }
