--- a/style.css
+++ b/style.css
@@ -20,11 +20,14 @@
     height: 80%;
 }
 
-.menu {
-    justify-content: space-around;
-    align-content: margin-right;
-    width: 80%;
-    align-items: baseline;
+.menu ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu li{
+    list-style: none;
 }
 
 .menu a {
