--- a/style.css
+++ b/style.css
@@ -93,5 +93,5 @@ div.contenedor.banner{
     background-size: cover;
     background-image: url(banner_home.jpg);
     width: 100%;
-    height: 300px;
+    height: 20vw;
 }
