--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 
 .ancho1{
-    width: 20%;
+    width: 25%;
 }
 
 .ancho2{
-    width: 75%;
+    width: 70%;
 }
 .logo img{
     height: 80%;
@@ -93,5 +93,5 @@ div.contenedor.banner{
     background-size: cover;
     background-image: url(banner_home.jpg);
     width: 100%;
-    height: 20vw;
+    height: 300px;
 }
